--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,11 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+
+
+// common
+@import "./common/variables";
+@import "./common/global";
+@import "./common/visually-hidden";
+@import "./common/mixins";
+@import "./common/fonts";
