feat: Добавляет шапку и блок hero

--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -4,5 +4,35 @@ $desktop-width: 1440px;
 $mobile-width-only: 767px;
 $min-width: 320px;
 
-//fonts
+// fonts
 $content-font: "Manrope", arial, sans-serif;
+
+// text color
+$main-text-color: #484848;
+$on-dark-text-color: #ffffff;
+$extra-text-color: #316dc2;
+$extra-on-dark-text-color: #f0efe9;
+
+// buttons color
+$button-on-light: #316dc2;
+$button-on-dark: #ffffff;
+$button-clicked: #275699;
+
+// background color
+$background-main: #f0efe9;
+$background-extra: #ffffff;
+$background-accent: #316dc2;
+
+// icons color
+$icon-main: #316dc2;
+$icon-extra: #ffffff;
+
+// form
+
+
+// overlay
+$overlay-picture: #316dc2, 20%;
+$overlay-main: #0d1d33, 40%;
+
+// common
+$disabled: #a9afb7;
