--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -9,3 +9,33 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.list-reset {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.link-reset {
+  display: block;
+  font-style: normal;
+  color: inherit;
+  text-decoration: none;
+}
+
+
+.button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.button-reset {
+  display: block;
+  color: inherit;
+  border: none;
+}
+
