--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,12 @@
 @import "./common/visually-hidden";
 @import "./common/mixins";
 @import "./common/fonts";
+
+
+// blocks
+@import "./blocks/page-body.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/navigation-menu.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/hero-slide.scss";
